...

    var id: String { rawValue }

    var displayName: String {
        switch self {
        case .MI: return "Michigan"
        case .NJ: return "New Jersey"
        case .PA: return "Pennsylvania"
        case .WV: return "West Virginia"
        }
    }
}

...
